force-app/main/default/objects/EDealerCart__c/EDealerCart__c.object-meta.xml
<CustomObject>
    <label>EDealerCart</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>EDealerCart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EDealerCarts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>