force-app/main/default/objects/EDealerCart__c/fields/Dealer_Location__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Location</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EDealerCarts</relationshipLabel>
    <relationshipName>EDealerCarts</relationshipName>
    <type>Lookup</type>
</CustomField>