force-app/main/default/objects/EDealerCart__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Order</fullName>
            </value>
            <value>
                <fullName>Stock Order</fullName>
            </value>
            <value>
                <fullName>DSP Order</fullName>
            </value>
            <value>
                <fullName>DSP Emergency Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>