force-app/main/default/objects/EDealerCart__c/fields/Suggested_Order__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Order__c</fullName>
    <label>Suggested Order</label>
    <referenceTo>EDealer_Suggested_Order__c</referenceTo>
    <relationshipLabel>EDealerCarts</relationshipLabel>
    <relationshipName>EDealerCarts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>