force-app/main/default/objects/EDealerCart__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;In Cart&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Cart</fullName>
            </value>
            <value>
                <fullName>Order Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>